--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="index.css?91a17f20_45f8_4284_9353_4e31e752b47b"/>
+	<link rel="stylesheet" href="index.css?0351ea46_2d3f_4ef5_8526_05ad90f4dc07"/>
 
 	<style>
 
@@ -129,6 +129,9 @@ document.wafxScreenInfos =
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem"  >Group</a>
+</li>
+<li role="presentation" >
+<a class="wafx-menu-item " role="menuitem" href="./940853ca_e0c3_4d00_bbf4_478dcd9503d5.html"  >Teaching</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
