--- a/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
+++ b/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?45022df5_e737_4e52_8fae_09f1a9b86458"/>
+	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?17851019_28af_4621_8007_744bf3cfd87d"/>
 
 	<style>
 
@@ -225,7 +225,7 @@ document.wafxScreenInfos =
 <div class="compVis_24"><div class='comp_24'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_25"><div class='comp_25'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_26"><div class='comp_26'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_27"><div class='comp_27'  title=""><a href="http://simon.physics.iastate.edu/PDF/cv.pdf"  ><div class='wafx-img-picture'></div></a></div></div>
+<div class="compVis_27"><div class='comp_27'  title=""><a href="http://simon.physics.iastate.edu/PDF/cv.pdf" target="_blank"  ><div class='wafx-img-picture'></div></a></div></div>
 
 
 						
