--- a/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
+++ b/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?17851019_28af_4621_8007_744bf3cfd87d"/>
+	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?fc7b9e08_7d34_4dbd_9599_a9cbb3900890"/>
 
 	<style>
 
@@ -225,7 +225,7 @@ document.wafxScreenInfos =
 <div class="compVis_24"><div class='comp_24'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_25"><div class='comp_25'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_26"><div class='comp_26'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_27"><div class='comp_27'  title=""><a href="http://simon.physics.iastate.edu/PDF/cv.pdf" target="_blank"  ><div class='wafx-img-picture'></div></a></div></div>
+<div class="compVis_27"><div class='comp_27'  title=""><a href="./04e68fd0_1a5e_4d81_8a90_176861cac685.html"  ><div class='wafx-img-picture'></div></a></div></div>
 
 
 						
