--- a/04e68fd0_1a5e_4d81_8a90_176861cac685.html
+++ b/04e68fd0_1a5e_4d81_8a90_176861cac685.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="04e68fd0_1a5e_4d81_8a90_176861cac685.css?0eba02ac_d0f7_4b55_93fe_75336c1c963e"/>
+	<link rel="stylesheet" href="04e68fd0_1a5e_4d81_8a90_176861cac685.css?bb8626ca_9ded_40d2_86cc_b1f4aff72920"/>
 
 	<style>
 
@@ -105,7 +105,7 @@ document.wafxScreenInfos =
 
 				<div class='blockPage'>
 
-						<div class="compVis_0"><div  class='comp_0'><embed src="PDF/cv.pdf" type="application/pdf" width="100%" height="600px" /></div></div>
+						<div class="compVis_0"><div  class='comp_0'><embed src="PDF/cv.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="600px" /></div></div>
 
 
 						
