--- a/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
+++ b/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?830b5ca6_9d3b_4c0e_997b_c4448514a2a0"/>
+	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?2deed5e9_cbd7_4887_a354_edc1cfd5d769"/>
 
 	<style>
 
@@ -225,7 +225,7 @@ document.wafxScreenInfos =
 <div class="compVis_24"><div class='comp_24'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_25"><div class='comp_25'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_26"><div class='comp_26'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_27"><div class='comp_27'  title=""><a href="./PDF/cv.pdf"  ><div class='wafx-img-picture'></div></a></div></div>
+<div class="compVis_27"><div class='comp_27'  title=""><a href="http://simon.physics.iastate.edu/PDF/cv.pdf" target="_blank"  ><div class='wafx-img-picture'></div></a></div></div>
 
 
 						
