--- a/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
+++ b/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?6e20b6a1_6976_4f53_967e_0039a615a44c"/>
+	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?655c0a1c_2beb_4a44_a1d0_a7d0f918f5f1"/>
 
 	<style>
 
@@ -225,7 +225,7 @@ document.wafxScreenInfos =
 <div class="compVis_24"><div class='comp_24'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_25"><div class='comp_25'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_26"><div class='comp_26'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_27"><div class='comp_27'  title=""><a href="http://simon.physics.iastate.edu/PDF/cv.pdf" target="_blank"  ><div class='wafx-img-picture'></div></a></div></div>
+<div class="compVis_27"><div class='comp_27'  title=""><a href="https://jbsimon.com/PDF/cv.pdf" target="_blank"  ><div class='wafx-img-picture'></div></a></div></div>
 
 
 						
