--- a/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
+++ b/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?ff3a9fc9_e1ed_46bb_ad89_817925baac78"/>
+	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?d7f293d9_7701_4e70_87f3_e4f5f085db55"/>
 
 	<style>
 
@@ -225,7 +225,7 @@ document.wafxScreenInfos =
 <div class="compVis_24"><div class='comp_24'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_25"><div class='comp_25'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_26"><div class='comp_26'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_27"><div class='comp_27'  title=""><embed src="PDF/cv.pdf" type="application/pdf" width="100%" target="_blank"></div></a></div></div>
+<div class="compVis_27"><div class='comp_27'  title=""><embed src="PDF/cv.pdf" type="application/pdf" width="100%" target="_blank"><div class='wafx-img-picture'></div></a></div></div>
 
 
 						
