--- a/62953553_a417_4d4f_bd29_0a1a6cc43087.html
+++ b/62953553_a417_4d4f_bd29_0a1a6cc43087.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="940853ca_e0c3_4d00_bbf4_478dcd9503d5.css?54cae5ae_e228_4f00_ad24_5f6df27d6561"/>
+	<link rel="stylesheet" href="62953553_a417_4d4f_bd29_0a1a6cc43087.css?786f00b2_abde_459a_9b57_5539cf8b5ecd"/>
 
 	<style>
 
@@ -105,84 +105,7 @@ document.wafxScreenInfos =
 
 				<div class='blockPage'>
 
-						<div class="compVis_0"><div class='comp_0'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_1"><div  class='comp_1'><div class='inner-box'></div><div class="wafx-menunid2 wafx-menu-wrapper" data-menu-unid="wafx-menunid2">
-<div class=" wafx-menu-bt-hamburger" >
-
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px">
-    <path d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z" />
-</svg>
-</div>
-<div class="wafx-menu" role="navigation" aria-label="Main menu"   data-sticky=true  data-sticky-bg="rgba(160,160,164,0.8)" >
-<ul class="wafx-menunid2  style='display:flex;justify-content:right;' wafx-menu-frame-main" role="menubar">
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./index.html"  >Home</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./6879c75c_711a_48d0_b4b7_c7118d12a47b.html#top"  >Curriculum Vitae</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html#top"  >Publications</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./ab92c95e_4926_48ab_a274_bd8cef2f7a58.html#top"  >Research</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Group</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem" href="./940853ca_e0c3_4d00_bbf4_478dcd9503d5.html"  >Teaching</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
-<ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Streaming Instability</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >3D Streaming Instability</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Streaming Induced Gravitational Collapse</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >MRI Turbulence</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Kelvin-Helmholtz Instability</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >3D Kelvin Helmholtz Instability</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Rayleigh-Taylor Instability</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >3D Rayleigh Taylor Instability</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Self-Gravitating Disk</a>
-</li>
-<li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Bow Shock</a>
-</li>
-</ul>
-</li>
-</ul>
-</div>
-</div>
-</div></div>
-<div class="compVis_2"><div  class='comp_2'></div></div>
-<div class="compVis_3"><div  class='comp_3 wafxText '><div class='textShape_1024' style='height:4px;'></div><p><span class="t0"   >A327 Zaffarano<br /></span><span class="t1"   >Ames, IA 50010, USA</span><br /><span class="t2"   >+1 (515) 294-2219</span>&nbsp;</p>
-<p><span class="t3"   >jbsimon.astro 'at' gmail.com</span>&nbsp;</p></div></div>
-<div class="compVis_4"><div class='comp_4'  title=""><a href="https://www.facebook.com/jbsimon.astro" target="_blank"  ><div class='wafx-img-picture'></div></a></div></div>
-<div class="compVis_5"><div class='comp_5'  title=""><a href="https://www.linkedin.com/in/jbsimon/" target="_blank"  ><div class='wafx-img-picture'></div></a></div></div>
-<div class="compVis_6"><div class='comp_6'  title=""><a href="https://scholar.google.com/citations?hl=en&user=7YH_CV8AAAAJs" target="_blank"  ><div class='wafx-img-picture'></div></a></div></div>
-<div class="compVis_7"><div  class='comp_7'></div></div>
-<div class="compVis_8"><div  class='comp_8 wafxText '><div class='textShape_1024' style='height:5px;'></div><h3 class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee"><span class="t4"   >Jake Simon</span></h3>
-<h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t5"   > Assistant Professor</span></h3>
-<h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
-<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>Page under construction... </p></div></div>
+						<div class="compVis_0"><div  class='comp_0'><embed src="PDF/cv.pdf" type="application/pdf" width="100%" target="_blank"></div></div>
 
 
 						
