--- a/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
+++ b/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?9559f00f_7f9b_44ee_a47a_23a67143738a"/>
+	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?f6b2115f_9b7b_49ab_b156_c86ac57271bd"/>
 
 	<style>
 
@@ -225,7 +225,7 @@ document.wafxScreenInfos =
 <div class="compVis_24"><div class='comp_24'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_25"><div class='comp_25'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_26"><div class='comp_26'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_27"><div class='comp_27'  title=""><embed src="PDF/cv.pdf" type="application/pdf" width="100%" target="_blank" image='wafx-img-picture'></a></div></div>
+<div class="compVis_27"><div class='comp_27'  title=""><a href="./62953553_a417_4d4f_bd29_0a1a6cc43087.html" target="_blank"  ><div class='wafx-img-picture'></div></a></div></div>
 
 
 						
