--- a/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
+++ b/6879c75c_711a_48d0_b4b7_c7118d12a47b.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?a9593d69_1bad_49d1_babd_6b6433e3a9aa"/>
+	<link rel="stylesheet" href="6879c75c_711a_48d0_b4b7_c7118d12a47b.css?7990ea77_2522_4e17_87c0_c58a266cf4b8"/>
 
 	<style>
 
@@ -225,7 +225,7 @@ document.wafxScreenInfos =
 <div class="compVis_24"><div class='comp_24'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_25"><div class='comp_25'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_26"><div class='comp_26'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_27"><div class='comp_27'  title=""><a href="./62953553_a417_4d4f_bd29_0a1a6cc43087.html" target="_blank"  ><div class='wafx-img-picture'></div></a></div></div>
+<div class="compVis_27"><div class='comp_27'  title=""><a href="./wafx_res/Files/cv.pdf" download="cv.pdf"  ><div class='wafx-img-picture'></div></a></div></div>
 
 
 						
