--- a/17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html
+++ b/17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Untitled page</title>
+	<title> Simon Research Group</title>
 
 	<meta name="description" content=""/>
 
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.css?5175da29_ffa0_49ed_bc1b_472ec6d6b181"/>
+	<link rel="stylesheet" href="17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.css?e806d6c3_6cd9_428e_97ff_6f78cc0ff7d3"/>
 
 	<style>
 
@@ -128,7 +128,7 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./ab92c95e_4926_48ab_a274_bd8cef2f7a58.html#top"  >Research</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Group</a>
+<a class="wafx-menu-item " role="menuitem" href="./17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html"  >Group</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./940853ca_e0c3_4d00_bbf4_478dcd9503d5.html"  >Teaching</a>
@@ -182,7 +182,19 @@ document.wafxScreenInfos =
 <div class="compVis_8"><div  class='comp_8 wafxText '><div class='textShape_1024' style='height:5px;'></div><h3 class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee"><span class="t4"   >Jake Simon</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t5"   > Assistant Professor</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
-<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>Page under construction... </p></div></div>
+<div class="compVis_9"><div class='comp_9'  title=""><div class='wafx-img-picture'></div></div></div>
+<div class="compVis_10"><div  class='comp_10 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  ><span class="t8"  >Daniel Carrera, Postdoc</span><br /></span>&nbsp;</p>
+<p style="text-align: justify;">Daniel joined my research group in the Fall of 2019, arriving from Penn State University, where he was a NASA Postdoctoral Fellow. He is investigating the formation of planetesimals in regions of high gas pressure ("pressure traps") thought to be present in protoplanetary disks. </p></div></div>
+<div class="compVis_11"><div  class='comp_11 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t9"  ><span class="t10"  >Matthew Small, Graduate Student</span><br /></span>&nbsp;</p>
+<p style="text-align: justify;">Matt will be joining my research group in the Spring of 2020.  He will be investigating key questions related to the initial planetesimal mass function.  For instance, how does the mass function vary with distance from the Sun? Answering this question is key to our understanding of how these objects form, as it allows us to compare directly with observed mass functions of e.g., the Kuiper Belt.</p></div></div>
+<div class="compVis_12"><div  class='comp_12 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t11"  ><span class="t12"  >Drew Thomas, Undergraduate Student</span><br /></span>&nbsp;</p>
+<p style="text-align: justify;">Drew joined my group in the Fall of 2019 and is working closely with my postdoc Daniel Carrera to address the timescales associated with planetesimal formation in protoplanetary disk gas pressure bumps. His project will address which bump-inducing mechanisms are capable of trapping particles and producing planetesimals</p></div></div>
+<div class="compVis_13"><div  class='comp_13 wafxText '><div class='textShape_1024' style='height:5px;'></div><p class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee"><span class="t13"  >I am hiring!</span>&nbsp;</p>
+<p class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee">&nbsp;</p>
+<p class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t14"  >I am currently seeking another postdoctoral research fellow (see the ad <a href="https://isu.wd1.myworkdayjobs.com/en-US/IowaStateJobs/job/Ames-IA/Postdoctoral-Research-Associate---Physics-and-Astronomy_R768" target="_blank"  style="text-decoration: underline;">here</a>) as well as a graduate student. </span>&nbsp;</p>
+<p class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t15"  ></span>&nbsp;</p>
+<p class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t16"  >Both individuals will have the opportunity to join a rapidly growing planet formation group at Iowa State University (funded in part by two recently won NASA grants) and work on problems related to protoplanetary disk evolution and planet formation</span>&nbsp;</p></div></div>
+<div class="compVis_14"><div class='comp_14'  title=""><div class='wafx-img-picture'></div></div></div>
 
 
 						
