--- a/940853ca_e0c3_4d00_bbf4_478dcd9503d5.html
+++ b/940853ca_e0c3_4d00_bbf4_478dcd9503d5.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Untitled page</title>
+	<title>Jake Simon - Teaching</title>
 
 	<meta name="description" content=""/>
 
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="940853ca_e0c3_4d00_bbf4_478dcd9503d5.css?f4b7e51d_70f2_47a9_b6bb_69b54c4aec2c"/>
+	<link rel="stylesheet" href="940853ca_e0c3_4d00_bbf4_478dcd9503d5.css?af3ee439_8558_40ec_9f3f_17b7c46da3f8"/>
 
 	<style>
 
@@ -128,7 +128,7 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./ab92c95e_4926_48ab_a274_bd8cef2f7a58.html#top"  >Research</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Group</a>
+<a class="wafx-menu-item " role="menuitem" href="./17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html"  >Group</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./940853ca_e0c3_4d00_bbf4_478dcd9503d5.html"  >Teaching</a>
@@ -182,7 +182,35 @@ document.wafxScreenInfos =
 <div class="compVis_8"><div  class='comp_8 wafxText '><div class='textShape_1024' style='height:5px;'></div><h3 class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee"><span class="t4"   >Jake Simon</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t5"   > Assistant Professor</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
-<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>Page under construction... </p></div></div>
+<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>I enjoy teaching courses in both astronomy and physics.  In my experience, the best way to learn something is to actually do it.  Thus, I am a very strong proponent of active learning at all levels, including in-class activities, discussions, and highly interactive lectures.  Furthermore, I enjoy using state-of-the-art technology in my teaching.</p>
+<p>&nbsp;</p>
+<p>Here are the courses that I have taught and will teach, with links where appropriate. </p></div></div>
+<div class="compVis_10"><div  class='comp_10 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >Computational Physics (Physics 551)</span>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p></div></div>
+<div class="compVis_11"><div  class='comp_11 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t8"  >Planet Formation (under development; graduate course)</span>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p></div></div>
+<div class="compVis_12"><div class='comp_12'  title=""><div class='wafx-img-picture'></div></div></div>
+<div class="compVis_13"><div  class='comp_13 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>Course goal: Introduce students to the power and potential pitfalls of computation in physics and to always be careful with "black box" codes</p>
+<p>&nbsp;</p>
+<p>Next semester to teach this course: Spring 2020</p>
+<p> </p>
+<p>Class materials/references:  Lecture Notes on GitHub, Computational Physics: Problem Solving with Python (Landau et al.)</p></div></div>
+<div class="compVis_14"><div class='comp_14'  title=""><div class='wafx-img-picture'></div></div></div>
+<div class="compVis_15"><div  class='comp_15 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>Next semester to teach this course: Fall 2020</p>
+<p> </p>
+<p>Class materials/references: under development</p></div></div>
+<div class="compVis_16"><div class='comp_16'  title=""><div class='wafx-img-picture'></div></div></div>
+<div class="compVis_17"><div class='comp_17'  title=""><div class='wafx-img-picture'></div></div></div>
+<div class="compVis_18"><div class='comp_18'  title=""><div class='wafx-img-picture'></div></div></div>
+<div class="compVis_19"><div  class='comp_19 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t9"  >Philosophy</span>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p></div></div>
+<div class="compVis_20"><div class='comp_20'  title=""><div class='wafx-img-picture'></div></div></div>
 
 
 						
