--- a/ab92c95e_4926_48ab_a274_bd8cef2f7a58.html
+++ b/ab92c95e_4926_48ab_a274_bd8cef2f7a58.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Untitled page</title>
+	<title>Jake Simon - Research Topics</title>
 
 	<meta name="description" content=""/>
 
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="ab92c95e_4926_48ab_a274_bd8cef2f7a58.css?d36d7e03_3d6b_4ad9_9530_a7485f75a2f5"/>
+	<link rel="stylesheet" href="ab92c95e_4926_48ab_a274_bd8cef2f7a58.css?9f21d805_207c_4ad0_abd5_23d4f05211e0"/>
 
 	<style>
 
@@ -128,7 +128,7 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./ab92c95e_4926_48ab_a274_bd8cef2f7a58.html#top"  >Research</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Group</a>
+<a class="wafx-menu-item " role="menuitem" href="./17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html"  >Group</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./940853ca_e0c3_4d00_bbf4_478dcd9503d5.html"  >Teaching</a>
