--- a/b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html
+++ b/b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Untitled page</title>
+	<title>Jake Simon - Publications</title>
 
 	<meta name="description" content=""/>
 
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css?4a953b05_aed2_4bad_9d99_22d4c94a0b02"/>
+	<link rel="stylesheet" href="b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css?f4c183e8_2553_4479_a45e_294d23810767"/>
 
 	<style>
 
@@ -128,7 +128,7 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./ab92c95e_4926_48ab_a274_bd8cef2f7a58.html#top"  >Research</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Group</a>
+<a class="wafx-menu-item " role="menuitem" href="./17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html"  >Group</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./940853ca_e0c3_4d00_bbf4_478dcd9503d5.html"  >Teaching</a>
@@ -208,7 +208,7 @@ document.wafxScreenInfos =
 <div class="compVis_18"><div class='comp_18'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_19"><div  class='comp_19 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t16"  >Full Publication List</span>&nbsp;</p></div></div>
 <div class="compVis_20"><div class='comp_20'  title=""><a href="http://simon.physics.iastate.edu/PDF/publications.pdf"  ><div class='wafx-img-picture'></div></a></div></div>
-<div class="compVis_21"><div  class='comp_21 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><a href="https://ui.adsabs.harvard.edu/search/filter_property_fq_property=AND&filter_property_fq_property=property%3A%22refereed%22&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq=%7B!type%3Daqp%20v%3D%24fq_property%7D&fq_author=(author_facet_hier%3A%221target="_blank" FSimontarget="_blank" C%20Jtarget="_blank" FSimontarget="_blank" C%20Jacob%20B%22%20OR%20author_facet_hier%3A%221target="_blank" FSimontarget="_blank" C%20Jtarget="_blank" FSimontarget="_blank" C%20Jacob%22%20OR%20author_facet_hier%3A%221target="_blank" FSimontarget="_blank" C%20Jtarget="_blank" FSimontarget="_blank" C%20J%20%20B%22)&fq_property=(property%3A%22refereed%22)&q=author%3A%22Simontarget="_blank" C%20Jacob%20B.%22&sort=date%20desctarget="_blank" C%20bibcode%20desc&p_=0" target="_blank" ><span class="t17"  >Find me on ADS</span></a>&nbsp;</p></div></div>
+<div class="compVis_21"><div  class='comp_21 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><a href="https://tinyurl.com/y5d9vxut" target="_blank" ><span class="t17"  >Find me on ADS</span></a>&nbsp;</p></div></div>
 <div class="compVis_22"><div  class='comp_22 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t18"  >PhD Thesis</span>&nbsp;</p></div></div>
 <div class="compVis_23"><div class='comp_23'  title=""><a href="http://simon.physics.iastate.edu/PDF/Thesis.pdf"  ><div class='wafx-img-picture'></div></a></div></div>
 
