--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Untitled page</title>
+	<title>Jake Simon - Home</title>
 
 	<meta name="description" content=""/>
 
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="index.css?f548b415_ba3a_48d8_bdf5_0f2c27ddf3c6"/>
+	<link rel="stylesheet" href="index.css?7eaec0f5_dcc1_406f_85e0_b128eb4cc8b4"/>
 
 	<style>
 
@@ -128,7 +128,7 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item " role="menuitem" href="./ab92c95e_4926_48ab_a274_bd8cef2f7a58.html#top"  >Research</a>
 </li>
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >Group</a>
+<a class="wafx-menu-item " role="menuitem" href="./17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html"  >Group</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem" href="./940853ca_e0c3_4d00_bbf4_478dcd9503d5.html"  >Teaching</a>
@@ -198,7 +198,9 @@ document.wafxScreenInfos =
 <p>&nbsp;</p>
 <p>-- My former undergraduate's first author paper has been accepted for publication in the Astrophysical Journal. ArXiv Link: <a href="https://arxiv.org/abs/1810.10018" target="_blank" >https://arxiv.org/abs/1810.10018</a>&nbsp;</p>
 <p>&nbsp;</p>
-<p>-- Recent paper published in Nature Astronomy that shows excellent agreement between theoretical predictions and observations of Kuiper Belt binary properties. Link: <a href="https://www.nature.com/articles/s41550-019-0806-z.epdf?author_access_token=x8xN-u-EoJNG7fBIxyOUTNRgN0jAjWel9jnR3ZoTv0P0yJ7LjCkYYDLljFyR2nBIwOFlbUtM5vb_Szq1tddDdfm4yVTliCiL_q9jRGmXML_LXajnWqnysHVOgLkpOUpTEuT6-aah8-b9V1RYCjA33A%3D%3D" target="_blank" >Nature Astronomy</a>; Link to a related blog article: <a href="https://astronomycommunity.nature.com/channels/1490-behind-the-paper/posts/50393-cold-distant-worlds-and-the-scientific-method?fbclid=IwAR07M7CqmH7bzJMvUjPYQwtYmdQw9jvRtddemBNnVJ8mRwGguHgGbe_GIfo" target="_blank" >Behind the Paper</a>&nbsp;</p></div></div>
+<p>-- Recent paper published in Nature Astronomy that shows excellent agreement between theoretical predictions and observations of Kuiper Belt binary properties. Link: <a href="https://www.nature.com/articles/s41550-019-0806-z.epdf?author_access_token=x8xN-u-EoJNG7fBIxyOUTNRgN0jAjWel9jnR3ZoTv0P0yJ7LjCkYYDLljFyR2nBIwOFlbUtM5vb_Szq1tddDdfm4yVTliCiL_q9jRGmXML_LXajnWqnysHVOgLkpOUpTEuT6-aah8-b9V1RYCjA33A%3D%3D" target="_blank" >Nature Astronomy</a>; Link to a related blog article: <a href="https://astronomycommunity.nature.com/channels/1490-behind-the-paper/posts/50393-cold-distant-worlds-and-the-scientific-method?fbclid=IwAR07M7CqmH7bzJMvUjPYQwtYmdQw9jvRtddemBNnVJ8mRwGguHgGbe_GIfo" target="_blank" >Behind the Paper</a>&nbsp;</p>
+<p>&nbsp;</p>
+<p>-- I am hiring a new postdoc:  Click <a href="https://isu.wd1.myworkdayjobs.com/en-US/IowaStateJobs/job/Ames-IA/Postdoctoral-Research-Associate---Physics-and-Astronomy_R768" target="_blank" >here</a> for more details!</p></div></div>
 
 
 						
