--- a/17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html
+++ b/17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.css?e806d6c3_6cd9_428e_97ff_6f78cc0ff7d3"/>
+	<link rel="stylesheet" href="17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.css?f4675b28_6038_4b72_bec0_8874c3388711"/>
 
 	<style>
 
@@ -195,6 +195,7 @@ document.wafxScreenInfos =
 <p class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t15"  ></span>&nbsp;</p>
 <p class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t16"  >Both individuals will have the opportunity to join a rapidly growing planet formation group at Iowa State University (funded in part by two recently won NASA grants) and work on problems related to protoplanetary disk evolution and planet formation</span>&nbsp;</p></div></div>
 <div class="compVis_14"><div class='comp_14'  title=""><div class='wafx-img-picture'></div></div></div>
+<div class="compVis_15"><div class='comp_15'  title=""><div class='wafx-img-picture'></div></div></div>
 
 
 						
