--- a/17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html
+++ b/17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.css?4397eaaa_c972_4dd9_a485_5f5fe61792ac"/>
+	<link rel="stylesheet" href="17b21a37_bb6b_4ee9_bbbd_5d018d0c5f43.css?7c98271e_bcb4_48f5_8a80_d0131b83ca58"/>
 
 	<style>
 
@@ -137,7 +137,7 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem"  >3D Streaming Instability</a>
