--- a/940853ca_e0c3_4d00_bbf4_478dcd9503d5.html
+++ b/940853ca_e0c3_4d00_bbf4_478dcd9503d5.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="940853ca_e0c3_4d00_bbf4_478dcd9503d5.css?01d0baea_ca78_43ff_9489_84446eb6458c"/>
+	<link rel="stylesheet" href="940853ca_e0c3_4d00_bbf4_478dcd9503d5.css?c4b1fac2_c3db_40eb_8807_daa2d2d6fc45"/>
 
 	<style>
 
@@ -137,7 +137,7 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem"  >3D Streaming Instability</a>
@@ -182,31 +182,31 @@ document.wafxScreenInfos =
 <div class="compVis_8"><div  class='comp_8 wafxText '><div class='textShape_1024' style='height:5px;'></div><h3 class="waStyle-46c785bb-4092-4d97-a4ff-af25c24c5eee"><span class="t4"   >Jake Simon</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t5"   > Assistant Professor</span></h3>
 <h3 class="waStyle-b6cd58d0-1379-4fdb-98e4-f8b73e927107"><span class="t6"   > Iowa State University</span></h3></div></div>
-<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>I enjoy teaching courses in both astronomy and physics.  In my experience, the best way to learn something is to actually do it.  Thus, I am a very strong proponent of active learning at all levels, including in-class activities, discussions, and highly interactive lectures.  Furthermore, I enjoy using state-of-the-art technology in my teaching.</p>
+<div class="compVis_9"><div  class='comp_9 wafxText '><div class='textShape_1024' style='height:5px;'></div><p style="text-align:justify"><span class="t7"  >I enjoy teaching courses in both astronomy and physics.  In my experience, the best way to learn something is to actually do it.  Thus, I am a very strong proponent of active learning at all levels, including in-class activities, discussions, and highly interactive lectures.  Furthermore, I enjoy using state-of-the-art technology in my teaching.</span>&nbsp;</p>
 <p>&nbsp;</p>
-<p>Here are the courses that I have taught and will teach, with links where appropriate. </p></div></div>
-<div class="compVis_10"><div  class='comp_10 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t7"  >Computational Physics (Physics 551)</span>&nbsp;</p>
+<p><span class="t8"  >Here are the courses that I have taught and will teach, with links where appropriate. </span>&nbsp;</p></div></div>
+<div class="compVis_10"><div  class='comp_10 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t9"  >Computational Physics (Physics 551)</span>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p></div></div>
-<div class="compVis_11"><div  class='comp_11 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t8"  >Planet Formation (under development; graduate course)</span>&nbsp;</p>
+<div class="compVis_11"><div  class='comp_11 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t10"  >Planet Formation (under development; graduate course)</span>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p></div></div>
 <div class="compVis_12"><div class='comp_12'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_13"><div  class='comp_13 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>Course goal: Introduce students to the power and potential pitfalls of computation in physics and to always be careful with "black box" codes</p>
+<div class="compVis_13"><div  class='comp_13 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t11"  >Course goal: Introduce students to the power and potential pitfalls of computation in physics and to always be careful with "black box" codes</span>&nbsp;</p>
 <p>&nbsp;</p>
-<p>Next semester to teach this course: Spring 2020</p>
-<p> </p>
-<p>Class materials/references:  Lecture Notes on GitHub, Computational Physics: Problem Solving with Python (Landau et al.)</p></div></div>
+<p><span class="t12"  >Next semester to teach this course: Spring 2020</span>&nbsp;</p>
+<p><span class="t13"  > </span>&nbsp;</p>
+<p><span class="t14"  >Class materials/references:  Lecture Notes on GitHub, Computational Physics: Problem Solving with Python (Landau et al.)</span>&nbsp;</p></div></div>
 <div class="compVis_14"><div class='comp_14'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_15"><div  class='comp_15 wafxText '><div class='textShape_1024' style='height:5px;'></div><p>Next semester to teach this course: Fall 2020</p>
-<p> </p>
-<p>Class materials/references: under development</p></div></div>
+<div class="compVis_15"><div  class='comp_15 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t15"  >Next semester to teach this course: Fall 2020</span>&nbsp;</p>
+<p><span class="t16"  > </span>&nbsp;</p>
+<p><span class="t17"  >Class materials/references: under development</span>&nbsp;</p></div></div>
 <div class="compVis_16"><div class='comp_16'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_17"><div class='comp_17'  title=""><div class='wafx-img-picture'></div></div></div>
 <div class="compVis_18"><div class='comp_18'  title=""><div class='wafx-img-picture'></div></div></div>
-<div class="compVis_19"><div  class='comp_19 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t9"  >Philosophy</span>&nbsp;</p>
+<div class="compVis_19"><div  class='comp_19 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t18"  >Philosophy</span>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p></div></div>
