--- a/b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html
+++ b/b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css?766f01ba_28d3_4c95_afcc_51e53075a0c2"/>
+	<link rel="stylesheet" href="b2c98e7e_12eb_45a6_ab75_1d057d3b1c25.css?2dcbb198_c9ff_45f5_b1ee_c9c2e78190a7"/>
 
 	<style>
 
@@ -137,7 +137,7 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem"  >3D Streaming Instability</a>
