--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="index.css?698d6887_a73d_4ca5_98bc_d6f23ccad4fc"/>
+	<link rel="stylesheet" href="index.css?6143f803_a166_4aee_9442_6cfe6187a3d7"/>
 
 	<style>
 
@@ -137,7 +137,7 @@ document.wafxScreenInfos =
 <a class="wafx-menu-item wafxMenuPopupItem  wafxLink" role="menuitem" aria-haspopup="true">Movies<span>&nbsp;&#9662;</span></a>
 <ul class="wafx-menunid2 wafx-menu-frame" role="menu" >
 <li role="presentation" >
-<a class="wafx-menu-item " role="menuitem"  >2D Streaming Instability</a>
+<a class="wafx-menu-item " role="menuitem" href="./5fb0f8f4_0c8f_4f88_b587_d4d60922f41b.html"  >2D Streaming Instability</a>
 </li>
 <li role="presentation" >
 <a class="wafx-menu-item " role="menuitem"  >3D Streaming Instability</a>
